# xinput_calibrator

./: .gitignore  COPYING  Changelog  Makefile  Makefile.am  README  README.md  autogen.sh  calibrator.cpp  calibrator.hh  configure.ac  get_precalib.sh  gui_gtkmm.cpp  gui_x11.cpp  main_common.hpp  main_gtkmm.cpp  main_x11.cpp  xinput_calibrator.cc  xinput_calibrator.spec.in
calibrators/: calibratorEvdev.cpp  calibratorUsbtouchscreen.cpp  calibratorXorgPrint.cpp
debian/: changelog  control  copyright  rules  watch
debian/patches/: link_as_needed.patch  remove_readme.patch  series  spelling_fixes.patch  typo_traditional.patch
man/: Makefile.am  xinput_calibrator.1
po/: POTFILES  POTFILES.in  hu.po  xinput_calibrator.pot
scripts/: Makefile.am  xinput_calibrator.desktop  xinput_calibrator_pointercal.sh
scripts/helper/: calibrate  calibrate-xinput.sh  calibrate.sh
src/: .gitignore  Makefile.am  calibrator.cpp  calibrator.hh  main_common.cpp  main_common.hpp  main_gtkmm.cpp  main_x11.cpp  tester.cpp
src/calibrator/: Evdev.cpp  Evdev.hpp  EvdevTester.cpp  EvdevTester.hpp  Libinput.cpp  Libinput.hpp  Makefile.am  Matrix.cpp  Matrix.hpp  Tester.cpp  Tester.hpp  Usbtouchscreen.cpp  Usbtouchscreen.hpp  XorgPrint.cpp  XorgPrint.hpp  calibratorEvdev.cpp  calibratorUsbtouchscreen.cpp  calibratorXorgPrint.cpp
src/gui/: Makefile.am  gtkmm.cpp  gtkmm.hpp  gui_common.cpp  gui_common.hpp  gui_gtkmm.cpp  gui_x11.cpp  x11.cpp  x11.hpp
uinput-touch-simulator/: uinput-touch-simulation.c
