EXTRA_DIST = \
    xinput_calibrator.desktop \
    xinput_calibrator_get_hal_calibration.sh \
    xinput_calibrator_pointercal.sh \
    xinput_calibrator.svg \
    xinput_calibrator.xpm

icon_DATA = xinput_calibrator.svg xinput_calibrator.xpm
icondir = $(datadir)/pixmaps

util_DATA = xinput_calibrator.desktop
utildir = $(datadir)/applications
